--- a/Squash_MVC/src/main/resources/templates/player_login.html
+++ b/Squash_MVC/src/main/resources/templates/player_login.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
-</body>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Players' login page</title>
+	</head>
+	
+	
+	<body>
+	
+		<form action="/player" method="post">
+	
+			<p>username:</p>
+			<input type="text" name="playerName"  >
+			
+			<br>
+			<br>
+			
+			<p>password:</p>
+			<input type="text" name="playerPassword">
+			<input type="submit">
+	
+		</form>
+	
+	</body>
+	
 </html>
