--- a/Squash_MVC/src/main/resources/templates/contest_confirm.html
+++ b/Squash_MVC/src/main/resources/templates/contest_confirm.html
@@ -39,7 +39,7 @@
 				<td th:text="${contest.location_id.id}" ></td>
 				<td th:text="${contest.date}" ></td>
 				<td th:text="${contest.result}" ></td>
-				<td th:text="${contest.winner}" ></td>
+				<td th:text="${contest.winner.id}" ></td>
 				
 			</tr>
 		
@@ -49,11 +49,21 @@
 		<br>
 	
 			<form action="/admin" method="post">
-		   	 	<input type="hidden" name="adminName" th:value="${admin_Name}"/>
-		   		<input type="hidden" name="password" th:value="${pass_word}"/>
+		   	 	<input type="hidden" name="username" th:value="${name}"/>
+		   		<input type="hidden" name="password" th:value="${pass}"/>
 		    <button>Go back</button>
 	    
 			</form>
+			
+		<br>
+		<br>	
+			
+			<form action="/delete" method="get">
+		   	 	
+		    <button>Exit</button>
+		    
+			</form>
+			
 
 	</body>
 	
