--- a/Squash_MVC/src/main/resources/templates/contest_confirm.html
+++ b/Squash_MVC/src/main/resources/templates/contest_confirm.html
@@ -58,7 +58,7 @@
 		<br>
 		<br>	
 			
-			<form action="/delete" method="get">
+			<form action="/" method="get">
 		   	 	
 		    <button>Exit</button>
 		    
