--- a/Squash_MVC/src/main/resources/templates/index.html
+++ b/Squash_MVC/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 			 	<input type="submit" formaction="/admin" value="Submit as Admin">
 					<br>
 					<br>
-				<input type="submit">
+				<input type="submit" value="Submit as Player">
 	
 		</form>
 	
