--- a/Squash_MVC/src/main/resources/templates/admin.html
+++ b/Squash_MVC/src/main/resources/templates/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
-	<title>Admin</title>
+		<meta charset="UTF-8">
+		<title>Admin</title>
 	</head>
 	
 	<body>
@@ -15,19 +15,19 @@
 				<h4>Here you can add new locations to Database:</h4>
 	
 					<p>The name of the location:</p>
-					<input type="text" name="name">
+						<input type="text" name="name">
 					
-					<br>
+						<br>
 					
 					<p>The address of the location:</p>
-					<input type="text" name="address">
+						<input type="text" name="address">
 				
-					<br>
+						<br>
 					
 					<p>The rent  of the location (HUF):</p>
-					<input type="number" name="rent">
-					<br>
-					<br>
+						<input type="number" name="rent">
+						<br>
+						<br>
 					<input type="submit" >
 	
 			</form>
@@ -35,17 +35,17 @@
 			<br>
 			<br>
 			
-				<form action="admin/addPlayer" method="post">
+			<form action="admin/addPlayer" method="post">
 			
 				<h4>Here you can add new players to Database:</h4>
 	
 					<p>The name of the players:</p>
-					<input type="text" name="playerName">
+						<input type="text" name="playerName">
 					
-					<br>
-					<br>
+						<br>
+						<br>
 					
-					<input type="submit" >
+							<input type="submit" >
 	
 			</form>
 			
@@ -79,6 +79,17 @@
 	
 			</form>
 			
+			
+			<br>
+			<br>	
+			
+			<form action="/" method="get">
+		   	 	
+		    <button>Exit</button>
+		    
+			</form>
+
+	</body>
 	
 	</body>
 	
