--- a/Squash_MVC/src/main/resources/templates/new_password.html
+++ b/Squash_MVC/src/main/resources/templates/new_password.html
@@ -6,24 +6,23 @@
 		<title>new password setting </title>
 	</head>
 
-
 	<body>
 	
 		<h4 style="text-align:center">This is your first login, you must change your password!</h4>
 		
-		<br>
-		<br>
+			<br>
+			<br>
 	
-		<form action="/password_confirm" method="post">
+			<form action="/password_confirm" method="post">
+			
+				<p>password:</p>
+				<input type="text" name="newPassword">
+				<input type="hidden" name="playerName" th:value="${p_Name}">
+				<input type="hidden" name="playerPassword" th:value="${p_Password}">
+				<input type="submit">
 		
-			<p>password:</p>
-			<input type="text" name="newPassword">
-			<input type="hidden" name="playerName" th:value="${p_Name}">
-			<input type="submit">
+			</form>
 	
-		</form>
-	
-
 	</body>
 
 </html>
