--- a/Squash_MVC/src/main/resources/templates/new_password.html
+++ b/Squash_MVC/src/main/resources/templates/new_password.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title>new password setting </title>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>new password setting </title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
 
-	<body>
-	
-		<h4 style="text-align:center">This is your first login, you must change your password!</h4>
-		
-			<br>
-			<br>
-	
-			<form action="/password_confirm" method="post">
-			
-				<p>password:</p>
-				<input type="text" name="newPassword">
-				<input type="hidden" name="playerName" th:value="${p_Name}">
-				<input type="hidden" name="playerPassword" th:value="${p_Password}">
-				<input type="submit">
-		
-			</form>
-	
-	</body>
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		   <button><span class="material-icons">cancel</span></button>
+		</form>
+	</div>
+	<h4>This is your first login, you must change your password!</h4>
+	<br>
+	<br>
+	<form action="/password_confirm" method="post">
+		<p>password:</p>
+		<input class="textfield" type="text" name="newPassword" placeholder="enter the new password...">
+		<br>
+		<br>
+		<input type="hidden" name="playerName" th:value="${p_Name}">
+		<input type="hidden" name="playerPassword" th:value="${p_Password}">
+		<input class="button" type="submit" value="Submit">
+	</form>
+</body>
 
 </html>
