--- a/Squash_MVC/src/main/resources/templates/password_confirm.html
+++ b/Squash_MVC/src/main/resources/templates/password_confirm.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-
-	<head>
-		<meta charset="UTF-8">
-		<title>Password has been changed</title>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>Password has been changed</title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
 	
-	<body>
-	
-		<h4 style="text-align:center"> Your password has been changed!</h4>
-		
-			<p>Click here to return the main page!</p>
-				<a href="/">  <button>Click</button></a>
-	
-	</body>
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		   <button><span class="material-icons">cancel</span></button>
+		</form>
+	</div>
+	<h4 class="confirm"> Your password has been changed!</h4>
+</body>
 	
 </html>
