--- a/Squash_MVC/src/main/resources/templates/failed_login.html
+++ b/Squash_MVC/src/main/resources/templates/failed_login.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Wrong input!</title>
-	</head>
 
-	<body>
-	
-		<p style="text-align: center">Incorrect username or password!</p>
-			<br>
-			<br>
-				<p>Click here to return the main page!</p>
-				
-					<a href="/">
-						<button>Click</button>
-					</a>
-	
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<title>Wrong input!</title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
+
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		    <button><span class="material-icons">cancel</span></button>
+		</form>
+	</div>
+	<h4 class="error">Incorrect username or password!</h4>
+</body>
 
 </html>
