--- a/Squash_MVC/src/main/resources/templates/playerPage.html
+++ b/Squash_MVC/src/main/resources/templates/playerPage.html
@@ -1,94 +1,58 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Welcome</title>
-		
-		<style>
-		table, th, td {
-		border: 2px solid black;
-		border-collapse:collapse;
-		}
-		
-		</style>
-		
-	
-	</head>
-	
-	<body>
-	
-		<h4>All contests</h4>
-			<br>
-			<br>
-	
-				<table>
-				
-					<th>Player 1:</th>
-					<th>Player 2:</th>
-					<th>Location:</th>
-					<th>Date</th>
-					<th>Result</th>
-					<th>Winner</th>
-					
-					<tr th:each="contests:${list}" >
-					
-						<td th:text="${contests.player_1.username}" ></td>
-						<td th:text="${contests.player_2.username}" ></td>
-						<td th:text="${contests.location_id.name}" ></td>
-						<td th:text="${contests.date}" ></td>
-						<td th:text="${contests.result}" ></td>
-						<td th:text="${contests.winner.username}" ></td>
-					
-					</tr>
-			
-				</table>
-			
-			<br>
-			<br>
-			
-				<p>Here you can select a player</p>
-			
-					<form action="player/selectedPlayer" method="post">
-			
-						<select name="selected_player">
-							<option th:each="players:${player_list}" th:value="${players.id}" th:text=${players.username}  >
-							
-							</option>
-					
-						</select>
-				
-							<input type="submit"  > 
-			
-					</form>
-			
-			<br>
-			<br>
-			
-				<p>Here you can select a location</p>
-			
-					<form action="player/selectedLocation" method="post">
-			
-						<select name="selected_location">
-							<option th:each="locals:${local_list}" th:value="${locals.id}" th:text=${locals.name}  >
-							
-							</option>
-					
-						</select>
-				
-							<input type="submit"  > 
-				
-			<br>
-			<br>
-			
-					</form>
-					
-						<form action="/" method="get">
-				   	 	
-				   		 <button>Exit</button>
-				    
-					</form>
-			
-	
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Welcome</title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
+
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		   <button><span class="material-icons">cancel</span></button>
+		</form>
+	</div>
+	<h4>All contests</h4>
+	<br>
+	<br>
+	<table>
+		<th>Player 1:</th>
+		<th>Player 2:</th>
+		<th>Location:</th>
+		<th>Date</th>
+		<th>Result</th>
+		<th>Winner</th>
+		<tr th:each="contests:${list}" >
+			<td th:text="${contests.player_1.username}" ></td>
+			<td th:text="${contests.player_2.username}" ></td>
+			<td th:text="${contests.location_id.name}" ></td>
+			<td th:text="${contests.date}" ></td>
+			<td th:text="${contests.result}" ></td>
+			<td th:text="${contests.winner.username}" ></td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<p>Here you can select a player</p>
+	<form action="player/selectedPlayer" method="post">
+		<select class="textfield" name="selected_player">
+			<option th:each="players:${player_list}" th:value="${players.id}" th:text=${players.username} ></option>
+		</select>
+		<input class="button" type="submit" value="Submit"  > 
+	</form>
+	<br>
+	<p>Here you can select a location</p>
+	<form action="player/selectedLocation" method="post">
+		<select class="textfield" name="selected_location">
+			<option th:each="locals:${local_list}" th:value="${locals.id}" th:text=${locals.name}  ></option>
+		</select>
+		<input class="button" type="submit" value="Submit"  > 
+	<br>
+	<br>
+	</form>
+</body>
 	
 </html>
