--- a/Squash_MVC/src/main/resources/templates/player_confirm.html
+++ b/Squash_MVC/src/main/resources/templates/player_confirm.html
@@ -1,63 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Confirmation Page</title>
-			
-			<style>
-				table, th, td {
-				border: 2px solid black;
-				border-collapse:collapse;
-				}
-		
-			</style>
-		
-	</head>
-	
-	
-	<body>
-	
-		<p style="text-align:center" >Saving is completed!</p>
-			<br>
-				<p>You have saved the following data: </p>
-			<br>
-	
-			<table>
-	
-				<th>Name of the player</th>
-				<th>The generated password of the player</th>
-				<th>The status of the player</th>
-			
-			<tr>
-		
-				<td th:text="${player.username}" ></td>
-				<td th:text="${player.password}" ></td>
-				<td th:text="${player.status}" ></td>
-				
-				
-			</tr>
-		
-			</table>
-		
-		<br>
-		<br>
-	
-			<form action="/admin" method="post">
-		   	 	
-		    	<button>Go back</button>
-	    
-			</form>
-			
-		<br>
-		<br>	
-			
-			<form action="/" method="get">
-		   	 	
-		   		 <button>Exit</button>
-		    
-			</form>
 
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<title>Confirmation Page</title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
 	
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		   <button><span class="material-icons">cancel</span></button>
+		</form>
+		<br>
+		<form action="/admin" method="post"> 
+			<button><span class="material-icons">arrow_back_ios_new</span></button>
+		</form>
+	</div>
+	<h4 class="confirm">Saving is completed!</h4>
+	<br>
+	<p>You have saved the following data: </p>
+	<br>
+	<table class="adminTable">
+		<th>Name of the player</th>
+		<th>The generated password of the player</th>
+		<th>The status of the player</th>
+		<tr>
+			<td th:text="${player.username}" ></td>
+			<td th:text="${player.password}" ></td>
+			<td th:text="${player.status}" ></td>
+		</tr>
+	</table>
+
+</body>
 	
 </html>
