--- a/Squash_MVC/src/main/resources/templates/wrongInput.html
+++ b/Squash_MVC/src/main/resources/templates/wrongInput.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Wrong Input!</title>
-	</head>
-	
-	<body>
-	
-		<p>Error! Please check your data, and try it one more time!</p>
-		
-				<form action="/admin" method="post">
-		   	 	
-		   			 <button>Go back</button>
-		    
-		   		 </form>
-	
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Wrong Input!</title>
+	<link rel="stylesheet" href="/css/squash_style.css" >
+	<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+</head>
+
+<body>
+	<div class="head">
+		<form action="/" method="get">
+		   <button><span class="material-icons">cancel</span></button>
+		</form>
+		<br>
+		<form action="/admin" method="post"> 
+			<button><span class="material-icons">arrow_back_ios_new</span></button>
+		  </form>
+	</div>
+	<h4 class="error">Error! Please check your data, and try it one more time!</h4>
+</body>
 	
 </html>
